start rename s/reStore/armadietto

--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -1,9 +1,9 @@
 <p><img src="<%= basePath %>/assets/remotestorage.svg"></p>
 
-<p>This is <em>reStore</em>, an open-source <a
+<p>This is <em>armadietto</em>, an open-source <a
   href="http://remotestorage.io/">remoteStorage</a> server. If you would like
   to host your own server, visit <a
-  href="http://github.com/jcoglan/restore">reStore on GitHub</a>.</p>
+  href="http://github.com/remotestorage/armadietto">armadietto on GitHub</a>.</p>
 
 <p>remoteStorage is an open protocol developed through the <a
   href="https://unhosted.org/">Unhosted</a> project. It lets people tell web
