feat: added info on username/address

--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -1,3 +1,8 @@
 <h2>You&rsquo;ve signed up</h2>
 
-<p>Thanks, <em><%= params.username %></em>.</p>
+<p>Thanks, <em><%= params.username %></em>.
+  <br />
+  Your storage account account is <%= params.username %>@<%= host %> 
+  <br />
+  Note, this is not an email address.
+</p>
