fix: removed duplicate account typo

--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -2,7 +2,7 @@
 
 <p>Thanks, <em><%= params.username %></em>.
   <br />
-  Your storage account account is <%= params.username %>@<%= host %> 
+  Your storage account is <%= params.username %>@<%= host %> 
   <br />
   Note, this is not an email address.
 </p>
