display all authenticated apps for a user on their account page
I added a new "Account" link in the header that allows users to view
all the apps that they've approved on their armadietto server. It will
prompt them to log in with their username/password and then it will
display:
- Their account name (username@host)
- A table of all their approved apps, with info about what permissions
  it has

--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -785,3 +785,16 @@ button[name="deny"]:focus {
 #switch.light::before {
   content: url('sprite.svg#icon-moon');
 }
+.deemphasize {
+	color: #a6a6a6;
+	font-size: 0.8em;
+}
+.favicon {
+	width: 32px;
+	height: 32px;
+	vertical-align: middle;
+}
+
+.account-info td {
+	font-size: 0.8em;
+}
