--- a/lib/views/layout.html
+++ b/lib/views/layout.html
@@ -15,6 +15,7 @@
 
         <ul class="nav">
           <li><a href="<%= basePath %>/">Home</a></li>
+		  <li><a href="<%= basePath %>/account">Account</a></li>
           <% if (signup) { %><li><a href="<%= basePath %>/signup">Sign up</a></li><% } %>
         </ul>
       </div>
