--- a/lib/views/signup-success.html
+++ b/lib/views/signup-success.html
@@ -1,3 +1,3 @@
 <h2>You&rsquo;ve signed up</h2>
 
-<p>Thanks, <em><%= params.username %></em>.</p>
+<p class="success">Thanks, <em><%= params.username %></em>. &#9786;</p>
