--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -2,16 +2,15 @@
 
   <header class="centered">
     <div class="artwork">
-      
-      <svg height="250" version="1.1" viewBox="0 0 739 853" xmlns="http://www.w3.org/2000/svg">
+      <svg role="img" height="200" version="1.1" viewBox="0 0 739 853" xmlns="http://www.w3.org/2000/svg">
+        <title>armadietto logo</title>
         <path d="m370.98-2.0508-369.81 213.2 86.396 45.572 283.42-161.13 283.82 163.86v66.385l-285.3-164.72-368.38 212.69v265.38l368.38 212.69 368.38-212.69v-166.32l1.4844-0.85742v-261.38zm-1.4844 260.82 283.82 163.86v1.4082l-282.34 163.01-283.78-165.29zm-283.82 261.21 285.3 164.72 282.34-163.01v68.672l-283.82 163.86-283.82-163.86z"/>
-        <path d="m363.97 335.65 126.76 73.863-123.09 70.617 123.08-70.616zm3.675 144.48 123.09-70.617-126.76-73.864-123.54 70.876zm30.959-90.55 26.803 24.798-7.6126 4.3675c-17.993-1.7221-40.107-3.8837-59.896-5.8122-6.9104-6.3466-13.833-12.691-20.701-19.044l-5.1269 2.9414 20.779 18.999c19.914 1.9631 39.83 3.9171 59.741 5.9012l-20.354 11.677c-19.966-1.9302-39.933-3.859-59.896-5.8122-9.0103-8.2747-18.026-16.548-26.919-24.84l7.6136-4.3681 26.996 24.795 45.831 4.5184 5.2045-2.9859c-15.326-1.4944-30.654-2.9752-45.986-4.4294-7.94-7.3609-17.679-16.43-26.919-24.84l20.43-11.721c8.976 8.2682 17.987 16.531 26.996 24.795l45.716 4.4763c-6.7858-6.3256-20.469-18.961-20.469-18.961l-36.649-3.5805-6.2188-5.7952 50.636 4.9188z" fill="#ff4b03" />
       </svg>       
     </div>
     <h2>Welcome to Armadietto!</h2>
     <p>
       This is an open-source server for syncing your data between different devices and applications. It is built on
-      <a class="rs-link" target="_blank" rel="noopener" href="https://remotestorage.io/">remoteStorage</a>, an open protocol for user data storage.
+      <a class="rs-link" target="_blank" rel="noopener" href="https://remotestorage.io/"><span>remoteStorage</span></a>, an open protocol for user data storage.
     </p>
   </header>
 
