--- a/lib/views/index.html
+++ b/lib/views/index.html
@@ -5,18 +5,19 @@
       <svg role="img" height="200" version="1.1" viewBox="0 0 739 853" xmlns="http://www.w3.org/2000/svg">
         <title>armadietto logo</title>
         <path d="m370.98-2.0508-369.81 213.2 86.396 45.572 283.42-161.13 283.82 163.86v66.385l-285.3-164.72-368.38 212.69v265.38l368.38 212.69 368.38-212.69v-166.32l1.4844-0.85742v-261.38zm-1.4844 260.82 283.82 163.86v1.4082l-282.34 163.01-283.78-165.29zm-283.82 261.21 285.3 164.72 282.34-163.01v68.672l-283.82 163.86-283.82-163.86z"/>
-      </svg>       
+      </svg>
     </div>
     <h2>Welcome to Armadietto!</h2>
     <p>
       This is an open-source server for syncing your data between different devices and applications. It is built on
-      <a class="rs-link" target="_blank" rel="noopener" href="https://remotestorage.io/"><span>remoteStorage</span></a>, an open protocol for user data storage.
+      <a class="rs-link" target="_blank" rel="noopener" href="https://remotestorage.io/"><span>remoteStorage</span></a>,
+      an open protocol for user data storage.
     </p>
   </header>
 
   <p>
-    If you would like  to host your own server, <br />
+    If you would like to host your own server,<br />
     visit <a class="github-link" href="http://github.com/remotestorage/armadietto" target="_blank">armadietto on GitHub</a>.
-  </p>   
-  
+  </p>
+
 </section>
