--- a/lib/views/auth.html
+++ b/lib/views/auth.html
@@ -27,7 +27,7 @@
 
     <div class="form-group">
       <label for="password">Enter the <em><%= username %></em> account's password</label>
-      <input type="password" name="password" id="password" autofocus placeholder="Password">
+      <input type="password" name="password" id="password" autofocus placeholder="Password" autocomplete="current-password">
       <button id="togglePassword" class="icon-eye icon-slash" type="button" tabindex="0" alt="on/off" title="show/hide password"></button>
     </div>
 
@@ -46,7 +46,7 @@
       // toggle the type attribute
       const type = password.getAttribute("type") === "password" ? "text" : "password";
       password.setAttribute("type", type);
-      
+
       // toggle the icon
       this.classList.toggle("icon-slash");
   });
