--- a/lib/views/layout.html
+++ b/lib/views/layout.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/svg+xml" href="<%= basePath %>/assets/favicon.svg">
 
-    <title><%- title || 'Welcome' %></title>
+    <title><%= title %> — Armadietto</title>
 
     <link rel="stylesheet" href="<%= basePath %>/assets/style.css">
   </head>
