--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -152,7 +152,6 @@ li {
 
 header.topbar {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
@@ -175,6 +174,9 @@ header.topbar h1 {
 }
 
 @media only screen and (max-width: 600px) {
+  header.topbar {
+    flex-direction: column;
+  }
   header.topbar h1 {
     padding-left: 0;
   }
@@ -220,9 +222,11 @@ header.topbar h1 a:focus {
 
 /* NAV HEADER */
 
-header.topbar nav {
-  align-self: flex-start;
-  margin-left: auto;
+@media only screen and (min-width: 601px) {
+  header.topbar nav {
+    align-self: flex-start;
+    margin-left: auto;
+  }
 }
 
 header.topbar nav ul {
